# fwob

./: .gitignore  BENCH.txt  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/fwob/: Cargo.toml  build.rs
crates/fwob-cli/: Cargo.toml
crates/fwob-cli/benches/: convert_fixture.rs
crates/fwob-cli/src/: main.rs
crates/fwob-cli/tests/: conversion.rs
crates/fwob-core/: Cargo.toml
crates/fwob-core/src/: error.rs  frame.rs  io.rs  key.rs  lib.rs  schema.rs  typed.rs
crates/fwob-derive/: Cargo.toml
crates/fwob-derive/src/: attributes.rs  lib.rs
crates/fwob-v1/: Cargo.toml
crates/fwob-v1/benches/: v1_read.rs
crates/fwob-v1/src/: core_api.rs  editor.rs  header.rs  lib.rs  metadata.rs  mutation.rs  reader.rs  verifier.rs  writer.rs
crates/fwob-v1/tests/: v1_compat.rs
crates/fwob-v1/tests/fixtures/: spot_4096.fwob
crates/fwob-v2/: Cargo.toml
crates/fwob-v2/benches/: codec_compare.rs  page_pack.rs  range_query.rs
crates/fwob-v2/src/: codec.rs  core_api.rs  encoding.rs  file_header.rs  lib.rs  page.rs  reader.rs  repair.rs  writer.rs
crates/fwob-v2/tests/: v2_pages.rs
crates/fwob/benches/: convert_fixture.rs
crates/fwob/src/: editor.rs  lib.rs  main.rs  maintenance.rs  organization.rs  reader.rs  selection.rs  toml.rs  typed.rs  writer.rs
crates/fwob/src/cli/: bench.rs  create.rs  discovery.rs  file_info.rs  format.rs  inspect.rs  metadata.rs  mod.rs  mutate.rs  operation_summary.rs  output.rs  query.rs  selection.rs  tokens.rs  transfer.rs
crates/fwob/src/formatting/: mod.rs
crates/fwob/tests/: chunked_streaming.rs  conversion.rs  core_polymorphism.rs  derive_compile_fail.rs  facade.rs  formatting_golden.rs  typed.rs
crates/fwob/tests/common/: mod.rs
crates/fwob/tests/golden/: format_csv.txt  format_hex.txt  format_jsonl.txt  format_md.txt  format_raw.txt  format_table.txt
crates/fwob/tests/ui/derive/: ignored_key.rs  ignored_key.stderr  invalid_string_index.rs  invalid_string_index.stderr  invalid_timestamp.rs  invalid_timestamp.stderr  missing_key.rs  missing_key.stderr
docs/: api.md  fwob-v1.md  fwob-v2.md  publishing.md
scripts/: release.ps1
