[workspace]
resolver = "2"
members = [
    "crates/fwob-core",
    "crates/fwob-v1",
    "crates/fwob-v2",
    "crates/fwob-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/stcmz/fwob"
homepage = "https://github.com/stcmz/fwob"
readme = "README.md"
rust-version = "1.75"
keywords = ["binary-format", "storage", "compression", "time-series"]
categories = ["data-structures", "encoding", "filesystem"]

[workspace.dependencies]
anyhow = "1.0"
bitflags = "2.5"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
crc32fast = "1.4"
lz4_flex = "0.11"
proptest = "1.4"
tempfile = "3.10"
thiserror = "1.0"
zstd = "0.13"
