[workspace]
resolver = "2"
members = [
    "crates/fwob-core",
    "crates/fwob-derive",
    "crates/fwob-v1",
    "crates/fwob-v2",
    "crates/fwob",
]

[workspace.package]
version = "1.5.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/stcmz/fwob"
homepage = "https://github.com/stcmz/fwob"
readme = "README.md"
rust-version = "1.85"
keywords = ["binary-format", "storage", "compression", "time-series"]
categories = ["data-structures", "encoding", "filesystem"]

[workspace.dependencies]
anyhow = "1.0"
bitflags = "2.5"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
crc32fast = "1.4"
lz4_flex = "0.11"
proptest = "1.4"
tempfile = "3.10"
thiserror = "1.0"
zstd = "0.13"
proc-macro2 = "1.0"
pathdiff = "0.2"
quote = "1.0"
rust_decimal = { version = "1.42", default-features = false, features = ["std"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
trybuild = "1.0"
unicode-width = "0.2"
