[package]
name = "fwob-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fwob"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fwob-core = { path = "../fwob-core" }
fwob-v1 = { path = "../fwob-v1" }
fwob-v2 = { path = "../fwob-v2" }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "convert_fixture"
harness = false
