[package]
name = "fwob-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared schema, frame, and key types for the FWOB binary format"

[dependencies]
thiserror.workspace = true
