[package]
name = "fwob-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared schema, frame, and key types for the FWOB binary format"

[dependencies]
fwob-derive = { version = "1.14.0", path = "../fwob-derive" }
rust_decimal.workspace = true
thiserror.workspace = true
