[package]
name = "fwob-v1"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reader, writer, verifier, and editor for the FWOB v1 binary format"

[dependencies]
byteorder.workspace = true
fwob-core = { version = "1.0.0", path = "../fwob-core" }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "v1_read"
harness = false
