[package]
name = "fwob-v2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
crc32fast.workspace = true
fwob-core = { path = "../fwob-core" }
lz4_flex.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "page_pack"
harness = false

[[bench]]
name = "range_query"
harness = false

[[bench]]
name = "codec_compare"
harness = false
