[package]
name = "fwob-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Fixed-page compressed storage for fast FWOB range queries and bulk append"

[dependencies]
byteorder.workspace = true
crc32fast.workspace = true
fwob-core = { version = "1.10.1", path = "../fwob-core" }
lz4_flex.workspace = true
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "page_pack"
harness = false

[[bench]]
name = "range_query"
harness = false

[[bench]]
name = "codec_compare"
harness = false
