[package]
name = "fwob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line tools for FWOB conversion, inspection, verification, and benchmarking"

[[bin]]
name = "fwob"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fwob-core = { version = "1.0.0", path = "../fwob-core" }
fwob-v1 = { version = "1.0.0", path = "../fwob-v1" }
fwob-v2 = { version = "1.0.0", path = "../fwob-v2" }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "convert_fixture"
harness = false
