[package]
name = "fwob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Version-neutral FWOB library facade and command-line tools"

[[bin]]
name = "fwob"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fwob-core = { version = "1.6.1", path = "../fwob-core" }
fwob-v1 = { version = "1.6.1", path = "../fwob-v1" }
fwob-v2 = { version = "1.6.1", path = "../fwob-v2" }
pathdiff.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-width.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
trybuild.workspace = true

[[bench]]
name = "convert_fixture"
harness = false
